// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TextField can be marked as invalid 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-text-field__label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can be marked as invalid 2`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--invalid"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-text-field__label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField renders correctly 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-text-field__label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;
